--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html,body{
@@ -24,7 +25,7 @@ a{
 }
 
 .navbar a{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .navbar input{
@@ -39,13 +40,14 @@ a{
 
 .group2{
     display: flex;
-    gap: 25px;
+    gap: 20px;
 }
 
 .searchbar{
     border: 1px solid black;
     padding: 10px;
-    border-radius: 15px;
+    border-radius: 25px;
+    width: 300px;
     display: flex;
     gap: 5px;
     align-items: center;
@@ -54,6 +56,25 @@ a{
 .searchbar input{
     outline: none;
     border: none;
+}
+
+.navbar button{
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 30px;
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.signup{
+    background-color: black !important;
+    color: white;
 }
 
 /* Navbar css 1 end */
@@ -114,6 +135,7 @@ a{
 .trending h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
+    font-weight: 400;
 }
 
 .trending a{
@@ -131,21 +153,25 @@ a{
 
 
 /* Card section start */
+.card{
+    position: relative;
+}
 
 .cardwrapper{
     width: 100%;
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    padding: 30px;
     justify-content: space-around;
+    gap: 20px !important;
 }
 
 
 
 .imgwrapper{
-    height: 500px;
-    width: 500px;
+    height: 340px;
+    width: 340px;
     overflow: hidden;
     border-radius: 30px;
 }
@@ -159,3 +185,38 @@ a{
 
 
 /* Card section end */
+
+.hoverBox{
+    height: 50px;
+    width: 100%;
+    background: linear-gradient(#f2f2f2, white);
+    /* background-color: blue; */
+    position: absolute;
+    bottom: 0px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* display: none; */
+    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.card:hover .hoverBox{
+    /* display: block; */
+    opacity: 1;
+}
+
+.grp11{
+    font-size: 20px;
+}
+
+.grp12 i{
+    font-size: 20px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 50%;
+}
